syntax = "proto3";

package endless.example.proto.vehicle;

import "vehicle/models.proto";

message UnitReply {}

message GetSpeedReply {
  SpeedV1 speed = 1;
}

message GetPositionReply {
  LatLonV1 position = 1;
}

message GetRecoveryCountReply {
  int32 recovery_count = 1;
}
